sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: ';' expected but '[' found.
Pour tout i dans [1,lgr-1]
                 ^AlgInsertionSort:5: error: '}' expected but 'case' found.
  stocker la valeur de la case i dans une variable v
                          ^